# Duri

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
agents_chatroom/: 00-gatekeeping-principles.md  2026-07-02-data-model-v03-gate-note.md  2026-07-03-storage-layout-rfc-0001-gate-plan.md  codex-gate-review-request.md  fable-gate-acceptance-spec.md  fable-gate-review.md
apps/api/: pyproject.toml
apps/api/src/duri_api/: __init__.py  auth.py  main.py  storage.py  timeline.py  timeline_index.py
apps/api/tests/: test_health.py  test_timeline_index.py  test_timeline_search.py  test_websocket_probe.py
apps/api/tests/gate_spec/: test_auth_session.py  test_storage_writer.py
apps/web/: eslint.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  timeline-workspace.tsx
apps/web/src/lib/: api.test.ts  api.ts
docs/: DATA_MODEL.md  EVENT_ENGINE.md  IMPLEMENTATION_PLAN.md  PRD.md  WORKFLOW.md
docs/adr/: ADR-001-human-readable-first.md  ADR-002-timeline-first.md  ADR-003-ai-generates-views-not-data.md  ADR-004-responsive-web-first.md  ADR-005-invite-code-two-person-auth.md  ADR-006-raw-gps-location-metadata.md  ADR-007-storage-is-export.md  ADR-008-preservation-first-mvp-vaultfolder-future-work.md  README.md
docs/rfc/: 0001-storage-layout.md  README.md
scripts/: check_markdown_links.py  ci.sh
